--- a/package.json
+++ b/package.json
@@ -3,16 +3,46 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.2.3",
+    "@codemirror/lang-javascript": "^6.0.1",
+    "@codemirror/lang-python": "^6.0.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mantine/core": "^4.2.12",
+    "@mantine/hooks": "^4.2.12",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/codemirror-theme-darcula": "^4.11.4",
+    "@uiw/codemirror-theme-okaidia": "^4.11.4",
+    "@uiw/react-codemirror": "^4.11.4",
+    "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
+    "codemirror": "^6.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "framer-motion": "^6.4.3",
+    "fs": "^0.0.1-security",
+    "python-shell": "^3.0.1",
     "react": "^18.2.0",
+    "react-avatar": "^5.0.1",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.3.0",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1",
+    "tabler-icons-react": "^1.52.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "server:dev": "nodemon server.js",
+    "server:prod": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
